# sovereign-a2a

./: README.md  pyproject.toml
sovereign_a2a/: __init__.py  message.py
