[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-a2a"
version = "0.1.0"
description = "A2A JSON-RPC 3.0 message primitives for Sovereign AI agent communications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/digiantnz/sovereign-a2a"
